--- a/GONG/index.html
+++ b/GONG/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Gamedev Canvas Workshop - lesson 1: create the Canvas and draw on it</title>
+    <title>GONG</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
