--- a/GONG/index.html
+++ b/GONG/index.html
@@ -8,6 +8,20 @@
 <body>
 
 <canvas id="myCanvas" width="480" height="320"></canvas>
+<!-- characters -->
+<img src="images/player.png" id="player" />
+<img src="images/angler1.png" id="angler1" />
+<img src="images/angler2.png" id="angler2" />
+<img src="images/lucky.png" id="lucky" />
+
+<!-- props -->
+<img src="images/projectile.png" id="projectile" />
+
+<!-- environment -->
+<img src="images/layer1.png" id="layer1" />
+<img src="images/layer2.png" id="layer2" />
+<img src="images/layer3.png" id="layer3" />
+<img src="images/layer4.png" id="layer4" />
 
 <script src="script.js"> </script>
 
