--- a/GONG/index.html
+++ b/GONG/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>GONG</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<canvas id="myCanvas" width="480" height="320"></canvas>
-<!-- characters -->
-<img src="images/player.png" id="player" />
-<img src="images/angler1.png" id="angler1" />
-<img src="images/angler2.png" id="angler2" />
-<img src="images/lucky.png" id="lucky" />
+    <canvas id="myCanvas" width="480" height="320"></canvas>
+    <!-- characters -->
+    <img src="images/player.png" id="player" />
+    <img src="images/angler1.png" id="angler1" />
+    <img src="images/angler2.png" id="angler2" />
+    <img src="images/lucky.png" id="lucky" />
 
-<!-- props -->
-<img src="images/projectile.png" id="projectile" />
+    <!-- props -->
+    <img src="images/projectile.png" id="projectile" />
+    <img src="images/gears.png" id="gears" />
+    <img src="images/smokeExplosion.png" id="smokeExplosion" />
+    <img src="images/fireExplosion.png" id="fireExplosion" />
 
-<!-- environment -->
-<img src="images/layer1.png" id="layer1" />
-<img src="images/layer2.png" id="layer2" />
-<img src="images/layer3.png" id="layer3" />
-<img src="images/layer4.png" id="layer4" />
+    <!-- environment -->
+    <img src="images/layer1.png" id="layer1" />
+    <img src="images/layer2.png" id="layer2" />
+    <img src="images/layer3.png" id="layer3" />
+    <img src="images/layer4.png" id="layer4" />
 
-<script src="script.js"> </script>
+    <script src="script.js"> </script>
 
 </body>
+
 </html>
